test/resources/InvalidPrograms/unknown_type_return.lo
class Main {
{ }
UnknownType main(){ return this; }
}
